tweaked some default config values